Finished first stage - website avaible for browsers

--- a/translations/pl.json
+++ b/translations/pl.json
@@ -199,7 +199,7 @@
                 {
                     "iconName": "spa",
                     "title": "SPA / Aplikacje internetowe",
-                    "description": "Tworzenie całej warstwy klienta aplikacji internetowej lub wybranych komponentów w oparciu <br>o framework AngularJS, HTML5, CSS3, ES6/TypeScript.",
+                    "description": "Tworzenie całej warstwy klienta aplikacji internetowej lub wybranych komponentów w oparciu o framework AngularJS, HTML5, CSS3, ES6/TypeScript.",
                     "button": "Więcej"
                 },
                 {
