--- a/translations/pl.json
+++ b/translations/pl.json
@@ -305,7 +305,18 @@
             "form": {
                 "h3": "Formularz kontaktowy",
                 "inputs": {
-                    
+                    "name": {
+                        "label": "Imię i nazwisko / Nazwa firmy"
+                    },
+                    "email": {
+                        "label": "E-mail"
+                    },
+                    "subject": {
+                        "label": "Temat"
+                    },
+                    "message": {
+                        "label": "Treść wiadomości"
+                    }
                 },
                 "submitButton": "Wyślij wiadomość"
             },
@@ -333,7 +344,6 @@
                 }
             }
         }
-
     },
     "mainFooter": {
         "recommendedProjects": {
@@ -354,5 +364,11 @@
             }
         },
         "copyright": "2015 - 2017 Mateusz Archiciński - Wszelkie prawa zastrzeżone"
+    },
+    "modalWrappers": {
+        "contactFormSuccess": [
+            "Powodzenie!",
+            "Twoja wiadomość została wysłana!"
+        ]
     }
 }
